2007-06-01  Alex Roitman  <shura@gramps-project.org>
	* data/grampsxml.rng: Add callname.
	* data/grampsxml.dtd: Add callname.
	* src/FilterEditor/_FilterEditor.py (check_recursive_filters,
	clean_after_rename, _do_delete_filter,_do_delete_selected_filter):
	Handle renaming and deletion of filters when other filters depend
	on them.
	* src/FilterEditor/_EditFilter.py (filter_name_changed): Prohibit
	creating new filter names colliding with existing filter names;
	(on_ok_clicked): Signal the name change.
	* src/DisplayState.py (DisplayState.__signals__): Add new signal
	to indicate filter name change: necessary for renaming/removing
	filters based on the changed name.

2007-05-31  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_WriteXML.py (_xml_version): Bump up version.
	* data/grampsxml.rng: Add privacy for sourceref and lds_ord.
	* data/grampsxml.dtd: Add privacy for sourceref and lds_ord.

2007-05-31  Don Allingham  <don@gramps-project.org>
	* configure.in: update to 2.2.9
	* src/plugins/WriteFtree.py (get_name): fix typo

2007-05-27  Don Allingham  <don@gramps-project.org>
	* configure.in: update for 2.2.8

2007-05-22  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_PedigreeView.py (PedigreeView.find_tree): Catch
	recursion error

2007-05-18  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/NarrativeWeb.py: fix gallery image links generated
	on Win32

2007-05-16  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/NarrativeWeb.py: 0000806: default for narrative
	website should be protect living

2007-05-15  Don Allingham  <don@gramps-project.org>
	* GrampsDb/gedcomexport.glade: remove gnome requirement
	* plugins/verify.glade: remove gnome requirement
	* plugins/cdexport.glade: remove gnome requirement
	* plugins/vcardexport.glade: remove gnome requirement
	* plugins/writeftree.glade: remove gnome requirement
	* plugins/eval.glade: remove gnome requirement
	* plugins/vcalendarexport.glade: remove gnome requirement